--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -1,5 +1,3 @@
-/* main.css */
-
 html, body, #app {
   margin: 0;
   padding: 0;
@@ -8,12 +6,14 @@ html, body, #app {
 }
 
 body {
-  padding-top: 80px; /* Equal height as Header */
-  margin: 0;
-  font-family: 'Poppins', sans-serif;
-  background-color: var(--bg-color);
-  color: var(--text-color);
-  transition: background-color 0.3s ease, color 0.3s ease;
+  padding-top: 80px; 
+  transition: background 0.3s ease, color 0.3s ease;
+}
+
+
+body.dark-theme {
+  background: var(--color-background) !important;
+  color: var(--color-text) !important;
 }
 
 #app {
@@ -21,29 +21,11 @@ body {
   flex-direction: column;
 }
 
-/* Light Theme (Default) */
-:root {
-  --bg-color: #ffffff;
-  --text-color: #333333;
-  --card-bg-color: #f8f9fa;
-  --button-bg-color: #8da4b9;
-  --button-hover-bg-color: #7b93a9;
-}
-
-/* Dark Theme */
-body.dark-theme {
-  --bg-color: #121212;
-  --text-color: #f1f1f1;
-  --card-bg-color: #1e1e1e;
-  --button-bg-color: #54627b;
-  --button-hover-bg-color: #43506a;
-}
-
 .card {
-  background-color: var(--card-bg-color);
-  color: var(--text-color);
+  background-color: var(--color-background-soft);
+  color: var(--color-text);
   border: none;
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 4px 12px rgba(0,0,0,0.1);
 }
 
 button {
